--- a/css/index.css
+++ b/css/index.css
@@ -123,6 +123,8 @@ a {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 14%;
+    /* margin-top: 14%; */
+    position: absolute;
+    top: 20%;
     background-color: rgba(34, 33, 33,0.5);
   }
