--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,7 @@ body {
     /* margin-top: 14%; */
     position: relative;
     top: 23%;
-    background-color: rgba(34, 33, 33,0.5);
+    /* background-color: rgba(34, 33, 33,0.5); */
     z-index: 900;
   }
 
