--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ body {
 .square {
     height: 50%;
     width: 100%;
-    display: block;
+    /* display: block; */
     margin-left: auto;
     margin-right: auto;
     /* margin-top: 14%; */
