--- a/css/index.css
+++ b/css/index.css
@@ -16,18 +16,16 @@ body {
 }
 
 .square {
-    overflow:auto;
     height: 50%;
     width: 100%;
-    /* display: block; */
+    display: block;
     margin-left: auto;
     margin-right: auto;
     /* margin-top: 14%; */
     position: relative;
     top: 23%;
-    background: rgba(255, 0, 0, 0.5);
-    /* background-color: rgba(34, 33, 33,0.5); */
-    z-index: 900;
+    background-color: rgba(34, 33, 33,0.5);
+    z-index: -900;
   }
 
 h1 {
