--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@ body {
     position: relative;
     top: 23%;
     background-color: rgba(34, 33, 33,0.5);
-    z-index: -900;
+    /* z-index: -900; */
   }
 
 h1 {
